# Komi

./: .gitignore  Komi.sln  README.md
Komi/: .gitignore  Komi.csproj  Program.cs  README.md
Komi/ENet.Managed/: ENetHost.cs
Komi/ENet.Managed/Native/: LibENet.cs  LibENetImports.cs  NativeENetProxyConfig.cs
Komi/SteamKit2/: changes.txt
Komi/SteamKit2/Networking/Steam3/: UdpConnection.cs
Komi/SteamKit2/Types/: DepotManifest.cs  KeyValue.cs
Komi/SteamKit2/Util/: StreamHelpers.cs  Utils.cs
Komi/enet/Managed/: ENet-CSharp.csproj
Komi/enet/Native/: enet.h
Komi/lib/: Manager.cs
Komi/lib/bot/: AStar.cs  Bot.cs  Inventory.cs  Login.cs  PacketHandler.cs  VariantHandler.cs
Komi/lib/bot/features/: AutoClearWorld.cs  AutoTutorial.cs
Komi/lib/gui/: Menu.cs
Komi/lib/gui/pages/: Bots.cs  ItemDatabase.cs  Settings.cs
Komi/lib/gui/pages/bot_pages/: InfoPage.cs  InventoryPage.cs  WorldPage.cs
Komi/lib/itemdatabase/: ItemDatabase.cs
Komi/lib/types/: Config.cs  ELoginMethod.cs  EPacketType.cs  ETankPacketType.cs  LoginInfo.cs  Player.cs  TankPacket.cs  Vector2.cs
Komi/lib/types/botinfo/: BotInfo.cs
Komi/lib/utils/: Binary.cs  Config.cs  Proton.cs  Random.cs  TextParse.cs  Variant.cs
Komi/lib/world/: TileType.cs  World.cs
enet-native/: CMakeLists.txt  host.c  interop_helpers.c  peer.c  protocol.c
enet-native/.github/workflows/: build.yml
enet-native/include/enet/: enet.h  protocol.h
